# AngelScript

./: CMakeLists.txt  angelscript.pri
angelscript/include/: angelscript.h
angelscript/source/: as_compiler.cpp  as_globalproperty.cpp  as_module.cpp  as_module.h  as_parser.cpp  as_property.h
